# opentyrian

./: .editorconfig  .gitignore  .hgignore  .hgtags  CMakeLists.txt  CREDITS  Doxyfile  Makefile  Makefile.emcc  NEWS  README  STYLE  WASM.md  async-functions.json  crosscompile.mk  index.html  lower-script.sh  opentyrian.desktop  pre.js  tyrian.xpm  vcpkg-configuration.json  vcpkg.json
.github/workflows/: demo.yml
doc/: files.txt  tyrian.hdt.txt
doc/tools/: weapon.py
linux/: opentyrian.appdata.xml  opentyrian.desktop
linux/man/: opentyrian.6
macosx/English.lproj/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
macosx/OpenTyrian.xcodeproj/: project.pbxproj
ports/midiproc/: portfile.cmake  vcpkg.json
src/: 3dstar.h  adlibemu.c  adlibemu.h  animlib.c  animlib.h  arg_parse.c  arg_parse.h  backgrnd.c  backgrnd.h  cJSON.c  cJSON.h  circvars.c  circvars.h  config.c  config.h  config_file.c  config_file.h  destruct.c  destruct.h  editship.c  editship.h  episodes.c  episodes.h  error.c  error.h  file.c  file.h  fm_synth.c  fm_synth.h  fmopl.c  fmopl.h  font.c  font.h  fonthand.c  fonthand.h  game_menu.c  game_menu.h  helptext.c  helptext.h  hg_revision.h  (+100 more)
src/macosx/: Info.plist  tyrian.icns
src/macosx/OpenTyrian.xcodeproj/: project.pbxproj
visualc/: opentyrian.props.template  opentyrian.sln  opentyrian.vcxproj  resources.rc  sdl_paths.props.template
